--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://earthcircle.wundersee.dev/api
-VITE_FRONTEND_URL=https://awundersee.github.io/earthcircle
+VITE_API_URL=https://forum.wundersee.dev/api
+VITE_FRONTEND_URL=https://earthcircle.wundersee.dev
